# ThreeDeath119etc

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  fi.sh  flake.nix
include/: vk_descriptors.h  vk_engine.h  vk_initializers.h  vk_types.h
include/vk-bootstrap/include/: VkBootstrapDispatch.h
include/vk-bootstrap/lib64/cmake/vk-bootstrap/: vk-bootstrap-config.cmake  vk-bootstrap-targets-noconfig.cmake  vk-bootstrap-targets.cmake
res/shaders/: gradient.comp
src/: main.cpp  vk_descriptors.cpp  vk_engine.cpp  vk_initializers.cpp  vk_pipelines.cpp
